--- a/estilos/style.css
+++ b/estilos/style.css
@@ -3,166 +3,128 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
 
-:root{
+:root {
+    /* Buscar melhores fontes */
     --cor-primaria: #225A98;
     --cor-secundaria: #3C70A9;
     --cor-terciaria: #82ACDB;
-    --cor-letras:#141517;
-    --font-primaria:"Noto Serif", serif;
-    --font-secundaria:"Lora", serif;
+    --cor-letras: #141517;
+    --font-primaria: "Noto Serif", serif;
+    --font-secundaria: "Lora", serif;
     --font-terciaria: "Ubuntu", sans-serif;
 }
 
-*{
+* {
     margin: 0px;
     padding: 0px;
-    font-family: var(--font-primaria);
     color: var(--cor-letras)
 }
-body{
-    background-color: white;
+
+body {
+    display: grid;
+    min-height: 100vh;
+    background-color: #e6edf4b0;
     overflow-x: hidden;
-
+    grid-template-columns: 50% 50%;
+    grid-template-areas:
+        'cabecalho cabecalho'
+        'main main'
+        'rodape rodape'
+    ;
 }
 
-img {
-    max-width: 100%; 
-    height: auto;
-}
 header {
+    grid-area: cabecalho;
     display: flex;
     justify-content: space-between;
-    align-items: center; 
-    background-image: linear-gradient(to right, var(--cor-secundaria), var(--cor-terciaria));
-    padding: 10px 20px; 
-    height: 80px;
-    width: 94%;
+    align-items: center;
+    height: 70px;
+    background-image: linear-gradient(to right, var(--cor-primaria), var(--cor-terciaria), var(--cor-primaria));
+    padding: 10px 5px;
+    font-family: var(--font-primaria);
+    font-size: 20px;
 }
-.logo {
-    font-size: 24px;
+
+header h1 {
+    font-size: 22px;
+}
+
+header p {
     font-weight: bold;
 }
 
-.header-icons {
+header img {
+    width: 50px;
+}
+
+main {
+    max-width: 100vw;
+    grid-area: main;
     display: flex;
-    gap: 15px; 
+    flex-direction: column;
+    justify-content: stretch;
+    flex-grow: 1;
 }
 
-.header-icons a img {
-    max-width: 45px;
+main h2 {
+    margin: 20px auto;
+    width: 600px;
+    background-image: linear-gradient(to right, var(--cor-terciaria), var(--cor-primaria), var(--cor-terciaria));
+    border-radius: 20px 0px;
+
+    font-family: var(--font-terciaria);
+    text-align: center;
+    font-weight: bolder;
 }
 
-section#about{
-    padding: 20px;
-    text-align: justify;
-    font-size: 1.2em;
+p {
     font-family: var(--font-secundaria);
+    font-size: 19px;
+    margin: 5px 10px;
+    max-width: 1700px;
+    text-align: justify;
 }
 
-h2{
-    width: 100%; 
+.about div {
+    max-width: 1700px;
+    margin: 0 auto;
+    padding: 10px;
+}
+
+.projects {
+    flex-grow: 1;
+}
+
+.techs img {
+    width: 100px;
+}
+
+.techs div {
     text-align: center;
-    height: 45px;
-    border-radius: 30px;
-    margin-bottom: 14px;
-    background-image: linear-gradient(to top, var(--cor-terciaria), var(--cor-primaria));
-}
-section#projects {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    width: 100%; 
-    height: 100vh;
-    padding-top: 60px;
-    overflow-x: hidden; 
-    box-sizing: border-box;
 }
 
-section#projects > h2 {
-    width: 100%; 
-    height: 40px;
-    text-align: center;
-    margin-bottom: 20px;
-}
 
-section#projects > div#imagem {
-    width: 100%; 
-    max-width: 540px; 
-    text-align: center;
-    position: relative;
-    margin-top: 20px;
-    overflow: hidden; 
-}
-
-section#projects > a > button {
-    font-size: 1.00002em;
-    background-color: var(--cor-terciaria);
-    border: 0px;
-    border-radius: 5px;
-    width: 170px;
-    height: 45px;
-    transition: background-color 0.3s ease, transform 0.2s ease;
-}
-section#projects > a > button:hover {
-    background-color: var(--cor-secundaria);
-    cursor: pointer;
-    transform: scale(1.05);
-}
-section#techs{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100vh;
-    box-sizing: border-box;
-    margin-top: -200px;
-}
-section#techs > h2 {
-    width: 100%; 
-    margin-bottom: 20px; 
-}
-
-section#techs > div#icons{
-    display: flex;
-    gap: 20px;
-    text-align: center;
-    justify-content: center;
-    flex-direction: row;
-}
-#icons img {
-    width: 140px; 
-    height: auto; 
-}
 
 footer {
-    text-align: left;
+    grid-area: rodape;
+    background-image: linear-gradient(to top, var(--cor-primaria), var(--cor-terciaria));
+    font-family: var(--font-secundaria);
     width: 100%;
-    padding: 20px;
-    background-color: var(--cor-primaria);
-    box-sizing: border-box;
 }
 
 footer h3 {
-    font-size: 1.7em;
-    margin-bottom: 15px;
+    font-size: 27px;
+    font-weight: 560;
+    margin: 20px 15px;
 }
 
-.contact-item {
-    display: flex;
-    align-items: center;
-    gap: 10px; 
-    margin-bottom: 10px;
+footer p {
+    margin: 5px 15px;
+    font-size: 19px;
+    font-weight: 500;
 }
 
-.contact-item img {
-    width: 24px; 
-    height: auto;
-}
-
-.contact-item p {
-    margin-left: 20px; 
-    font-size: 18px;
-    font-weight: bold;
+footer i {
+    text-align: center;
+    margin: 0px 5px;
 }
