--- a/estilos/style.css
+++ b/estilos/style.css
@@ -71,6 +71,7 @@ main h2 {
     width: 600px;
     background-image: linear-gradient(to right, var(--cor-terciaria), var(--cor-primaria), var(--cor-terciaria));
     border-radius: 20px 0px;
+    box-shadow: 1px 0px 7px 2px rgba(0, 0, 0, 0.322);
 
     font-family: var(--font-terciaria);
     text-align: center;
@@ -93,6 +94,50 @@ p {
 
 .projects {
     flex-grow: 1;
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.projects .card {
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
+    justify-content: space-between;
+    width: 590px;
+    height: 350px;
+    background-image: linear-gradient(to bottom, var(--cor-terciaria), var(--cor-primaria), var(--cor-secundaria));
+    padding: 10px;
+    box-sizing: border-box;
+    border-radius: 5px 5px 5px 5px;
+    box-shadow: 1px 0px 7px 2px rgba(0, 0, 0, 0.322);
+}
+
+.projects img {
+    width: 560px;
+    height: 280px;
+}
+
+
+.projects a{
+    background-color: #007BFF;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    margin-top: 10px;
+    padding: 5px 10px;
+    align-self: center;
+
+    font-family: var(--font-terciaria);
+    font-size: 14px;
+    font-weight: normal;
+    text-decoration: none;
+    color: white;
+    text-transform: capitalize;
+    transition: background-color 0.3s ease;
+}
+.projects a:hover{
+    background-color: #0063ce;
+    border: 1px solid black;
 }
 
 .techs img {
