--- a/estilos/style.css
+++ b/estilos/style.css
@@ -2,9 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
-
 :root {
-    /* Buscar melhores fontes */
     --cor-primaria: #225A98;
     --cor-secundaria: #3C70A9;
     --cor-terciaria: #82ACDB;
@@ -14,10 +12,18 @@
     --font-terciaria: "Ubuntu", sans-serif;
 }
 
+html {
+    box-sizing: border-box;
+}
+
+*, *::before, *::after {
+    box-sizing: inherit;
+}
+
 * {
-    margin: 0px;
-    padding: 0px;
-    color: var(--cor-letras)
+    margin: 0;
+    padding: 0;
+    color: var(--cor-letras);
 }
 
 body {
@@ -29,8 +35,7 @@ body {
     grid-template-areas:
         'cabecalho cabecalho'
         'main main'
-        'rodape rodape'
-    ;
+        'rodape rodape';
 }
 
 header {
@@ -68,11 +73,11 @@ main {
 
 main h2 {
     margin: 20px auto;
-    width: 600px;
+    width: 90%;
+    max-width: 100%;
     background-image: linear-gradient(to right, var(--cor-terciaria), var(--cor-primaria), var(--cor-terciaria));
     border-radius: 20px 0px;
     box-shadow: 1px 0px 7px 2px rgba(0, 0, 0, 0.322);
-
     font-family: var(--font-terciaria);
     text-align: center;
     font-weight: bolder;
@@ -82,12 +87,13 @@ p {
     font-family: var(--font-secundaria);
     font-size: 19px;
     margin: 5px 10px;
-    max-width: 1700px;
+    max-width: 100%;
     text-align: justify;
 }
 
 .about div {
-    max-width: 1700px;
+    width: 90%;
+    max-width: 100%;
     margin: 0 auto;
     padding: 10px;
 }
@@ -99,6 +105,7 @@ p {
     justify-content: center;
     flex-wrap: wrap;
 }
+
 .projects .card {
     display: flex;
     flex-direction: column; 
@@ -109,7 +116,7 @@ p {
     background-image: linear-gradient(to bottom, var(--cor-terciaria), var(--cor-primaria), var(--cor-secundaria));
     padding: 10px;
     box-sizing: border-box;
-    border-radius: 5px 5px 5px 5px;
+    border-radius: 5px;
     box-shadow: 1px 0px 7px 2px rgba(0, 0, 0, 0.322);
 }
 
@@ -118,15 +125,13 @@ p {
     height: 280px;
 }
 
-
-.projects a{
+.projects a {
     background-color: #007BFF;
     border: 1px solid #fff;
     border-radius: 5px;
     margin-top: 10px;
     padding: 5px 10px;
     align-self: center;
-
     font-family: var(--font-terciaria);
     font-size: 14px;
     font-weight: normal;
@@ -135,7 +140,8 @@ p {
     text-transform: capitalize;
     transition: background-color 0.3s ease;
 }
-.projects a:hover{
+
+.projects a:hover {
     background-color: #0063ce;
     border: 1px solid black;
 }
@@ -147,8 +153,6 @@ p {
 .techs div {
     text-align: center;
 }
-
-
 
 footer {
     grid-area: rodape;
@@ -171,5 +175,59 @@ footer p {
 
 footer i {
     text-align: center;
-    margin: 0px 5px;
+    margin: 0 5px;
+}
+
+/* Responsivo para telas pequenas */
+@media (max-width: 930px) {
+    body {
+        grid-template-columns: 1fr;
+        grid-template-areas:
+            'cabecalho'
+            'main'
+            'rodape';
+    }
+
+    header {
+        flex-direction: column;
+        height: auto;
+        text-align: center;
+    }
+
+    main h2 {
+        width: 90%;
+        font-size: 18px;
+    }
+
+    p {
+        font-size: 16px;
+        margin: 5px;
+    }
+
+    .projects {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .projects .card {
+        width: 90%;
+        height: auto;
+    }
+
+    .projects img {
+        width: 100%;
+        height: auto;
+    }
+
+    .techs img {
+        width: 70px;
+    }
+
+    footer h3 {
+        font-size: 20px;
+    }
+
+    footer p {
+        font-size: 16px;
+    }
 }
