--- a/estilos/style.css
+++ b/estilos/style.css
@@ -16,7 +16,9 @@ html {
     box-sizing: border-box;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
     box-sizing: inherit;
 }
 
@@ -32,6 +34,7 @@ body {
     background-color: #e6edf4b0;
     overflow-x: hidden;
     grid-template-columns: 50% 50%;
+    transition: background-color 0.5s ease, color 0.5s ease;
     grid-template-areas:
         'cabecalho cabecalho'
         'main main'
@@ -62,6 +65,55 @@ header img {
     width: 50px;
 }
 
+#darkmode {
+    background-color: var(--cor-primaria);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 8px 12px;
+    font-family: var(--font-terciaria);
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-left: 10px;
+}
+
+#darkmode:hover {
+    background-color: var(--cor-secundaria);
+    color: #fff;
+}
+
+body.dark-mode #darkmode {
+    background-color: #1e1e1e;
+    color: #f0f0f0;
+    color: #fff;
+}
+
+body.dark-mode header {
+    background-image: linear-gradient(to right, #333, #555, #333);
+    color: #fff;
+}
+
+body.dark-mode main h2 {
+    background-image: linear-gradient(to right, #555, #333, #555);
+    color: #fff;
+}
+
+body.dark-mode .projects .card {
+    background-image: linear-gradient(to bottom, #555, #333, #222);
+    color: #fff;
+}
+
+body.dark-mode footer {
+    background-image: linear-gradient(to top, #333, #555);
+    color: #fff;
+}
+
+body.dark-mode #darkmode {
+    background-color: #444;
+    color: #fff;
+}
+
 main {
     max-width: 100vw;
     grid-area: main;
@@ -69,6 +121,17 @@ main {
     flex-direction: column;
     justify-content: stretch;
     flex-grow: 1;
+}
+
+section {
+    opacity: 0;
+    transform: translateY(50px);
+    transition: all 0.6s ease;
+}
+
+section.show {
+    opacity: 1;
+    transform: translateY(0);
 }
 
 main h2 {
@@ -108,7 +171,7 @@ p {
 
 .projects .card {
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
     width: 590px;
